--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField("String", "API_KEY", API_KEY)
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.soran.shoppingtest.HiltTestRunner"
     }
 
     buildTypes {
@@ -99,6 +99,8 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
     testImplementation "com.google.truth:truth:1.1.2"
     testImplementation "org.mockito:mockito-core:2.21.0"
+    testImplementation 'com.google.dagger:hilt-android-testing:2.35'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
 
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:4.13.2"
@@ -109,4 +111,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "org.mockito:mockito-core:2.21.0"
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
 }
