--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,5 +114,6 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
 }
